yaml/100-poi.yaml
<<<<<<< HEAD:yaml/poi.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: poi
  namespace: api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: poi
  template:
    metadata:
      labels:
        app: poi
      name: poi
    spec:
      containers:
      - name: poi
        image: registry3m84331.azurecr.io/tripinsights/poi:1.0
---
apiVersion: v1
kind: Service
metadata:
  name: poi
  namespace: default
  annotations:
    service.beta.kubernetes.io/azure-load-balancer-internal: "true"
spec:
  ports:
  - port: 80
    targetPort: 80
  selector:
    app: poi
=======
apiVersion: apps/v1
kind: Deployment
metadata:
  name: poi
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: poi
  template:
    metadata:
      labels:
        app: poi
      name: poi
    spec:
      containers:
      - name: poi
        image: registry3m84331.azurecr.io/tripinsights/poi:1.0
---
apiVersion: v1
kind: Service
metadata:
  name: poi
  namespace: default
  annotations:
    service.beta.kubernetes.io/azure-load-balancer-internal: "true"
spec:
  ports:
  - port: 80
    targetPort: 80
  selector:
    app: poi
>>>>>>> de1bff5bdf7e7e83f1add3c652a6ef5f89d55d37:yaml/100-poi.yaml
  type: LoadBalancer
