yaml/100-trips.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: trips
  namespace: api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: trips
  template:
    metadata:
      labels:
        app: trips
      name: trips
    spec:
      containers:
      - name: trips
        image: registry3m84331.azurecr.io/tripinsights/trips:1.0
---
apiVersion: v1
kind: Service
metadata:
  name: trips
  namespace: api
  annotations:
    service.beta.kubernetes.io/azure-load-balancer-internal: "true"
spec:
  ports:
  - port: 80
    targetPort: 80
  selector:
    app: trips
  type: LoadBalancer
