yaml/100-userprofile.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: userprofile
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: userprofile
  template:
    metadata:
      labels:
        app: userprofile
      name: userprofile
    spec:
      containers:
      - name: userprofile
        image: registry3m84331.azurecr.io/tripinsights/userprofile:1.0
---
apiVersion: v1
kind: Service
metadata:
  name: userprofile
  namespace: default
  annotations:
    service.beta.kubernetes.io/azure-load-balancer-internal: "true"
spec:
  ports:
  - port: 80
    targetPort: 80
  selector:
    app: userprofile
  type: LoadBalancer
