yaml/poi.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: poi
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: poi
  template:
    metadata:
      labels:
        app: poi
      name: poi
    spec:
      containers:
      - name: poi
        image: registry3m84331.azurecr.io/tripinsights/poi:1.0
---
apiVersion: v1
kind: Service
metadata:
  name: poi
  namespace: default
  annotations:
    service.beta.kubernetes.io/azure-load-balancer-internal: "true"
spec:
  ports:
  - port: 80
    targetPort: 80
  selector:
    app: poi
  type: LoadBalancer
