yaml/tripviewer.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tripviewer
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: tripviewer
  template:
    metadata:
      labels:
        app: tripviewer
      name: tripviewer
    spec:
      containers:
      - name: tripviewer
        image: registry3m84331.azurecr.io/tripinsights/tripviewer:1.0
---
apiVersion: v1
kind: Service
metadata:
  name: tripviewer
  namespace: default
  annotations:
    service.beta.kubernetes.io/azure-load-balancer-internal: "true"
spec:
  ports:
  - port: 80
    targetPort: 80
  selector:
    app: tripviewer
  type: LoadBalancer
