yaml/user-java.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user-java
  namespace: api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: user-java
  template:
    metadata:
      labels:
        app: user-java
      name: user-java
    spec:
      containers:
      - name: user-java
        image: registry3m84331.azurecr.io/tripinsights/user-java:1.0
---
apiVersion: v1
kind: Service
metadata:
  name: user-java
  namespace: default
  annotations:
    service.beta.kubernetes.io/azure-load-balancer-internal: "true"
spec:
  ports:
  - port: 80
    targetPort: 80
  selector:
    app: user-java
  type: LoadBalancer
