yaml/200-tripviewer-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: tripviewer
  namespace: web
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
  - http:
      paths:
      - backend:
          serviceName: tripviewer
          servicePort: 80
        path: /(.*)
      - backend:
          serviceName: insurance
          servicePort: 80
        path: /insurance(.*)    
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: apis
  namespace: api
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
  - http:
      paths:
      - backend:
          serviceName: poi
          servicePort: 80
        path: /api/poi(.*)
      - backend:
          serviceName: trips
          servicePort: 80
        path: /api/trips(.*)
      - backend:
          serviceName: user-java
          servicePort: 80
        path: /api/user-java(.*)
      - backend:
          serviceName: userprofile
          servicePort: 80
        path: /api/user(.*)
      - backend:
          serviceName: user-java
          servicePort: 80
        path: /api/healthcheck/user-java
      - backend:
          serviceName: user-java
          servicePort: 80
        path: /api/docs/user-java
      - backend:
          serviceName: userprofile
          servicePort: 80
        path: /api/healthcheck/user
      - backend:
          serviceName: userprofile
          servicePort: 80
        path: /api/docs/user
      - backend:
          serviceName: userprofile
          servicePort: 80
        path: /api/documentation/user-java        
      - backend:
          serviceName: trips
          servicePort: 80
        path: /api/healthcheck/trips
      - backend:
          serviceName: trips
          servicePort: 80
        path: /api/docs/trips
      - backend:
          serviceName: trips
          servicePort: 80
        path: /api/json  
      - backend:
          serviceName: poi
          servicePort: 80
        path: /api/healthcheck/poi
      - backend:
          serviceName: poi
          servicePort: 80
        path: /api/docs/poi
      - backend:
          serviceName: poi
          servicePort: 80
        path: /swagger/docs/poi
